# alles-gut-ocha

./: .gitignore  README.md  pyproject.toml
api/: chatbot.py  hdx_client.py  main.py  scorer.py
docs/: documentation.tex  workshop_notes.md
frontend/: package-lock.json  package.json
frontend/src/: App.js  Chat.js  CounterfactualSlider.js  CsvViewer.js  RadarModal.js  TsneChart.js  Weights.js  WorldMap.js  dummy.js
notebooks/: cluster_exploration.ipynb  explore_big_csv.ipynb
scripts/data/: create_big_csv.py  create_seed_data.py  explore.ipynb  explore2.ipynb  explore3.ipynb  test.py
scripts/embeddings/: aggregation.ipynb  crisis_embeddings.py  embeddings.ipynb
side_challenges/: claude.txt
src/datathon_un/: __init__.py
