[project]
name = "datathon-un"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dominik Lau", email = "harek2388@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
