[project]
name = "datathon-un"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dominik Lau", email = "harek2388@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pycountry>=26.2.16",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
